--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -5,8 +5,11 @@ body, .login-container {
   justify-content: center;
   align-items: center;
   min-height: 75vh;
-  background: linear-gradient(to bottom, #41b5e6, #2a3ebf 50%, white 50%);
-  font-family: Arial, sans-serif;
+  background: 
+      linear-gradient(to right, #41b5e6, #2a3ebf) 0 0,
+      white 0 50%;
+  background-size: 100% 50%;
+  background-repeat: no-repeat;
 }
 
 .login-box {
@@ -16,7 +19,8 @@ body, .login-container {
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   text-align: center;
   max-width: 400px;
-  width: 100%;
+  width: 90%;
+  margin-top: 20px;
 }
 
 .logo {
@@ -48,18 +52,16 @@ body, .login-container {
   text-decoration: underline;
 }
 
-footer {
-  position: relative;
-  margin: 20px;
-}
-
-footer button{
-  color: #4180e6;
+form button{
+  border-radius: 4px;
   background-color: transparent;
-  text-decoration: none;
-  font-weight: lighter;
+  transition: 0.3s;
+  border: 1px solid #2a3ebf;
+  color: #2a3ebf;
+  padding: 10px;
 }
 
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-flex {
-  background-color: #000000; /* Example light grey */
+form button:hover{
+  color: white;
+  background-color: #2a3ebf;
 }
