--- a/src/app/pages/recover-access/recover-access.component.html
+++ b/src/app/pages/recover-access/recover-access.component.html
@@ -6,33 +6,29 @@
           </a>
         </div>
       </nav>
-      <div class="login-container">
-          <div class="login-box">
+      <div class="recover-container">
+          <div class="recover-box">
               <img src="assets/logo.png" alt="DDC Logo" class="logo" width="200"
                   height="90">
               <div style="text-align: start;">
-                  <h6><b>Ingresar al Visualizador de Producción</b></h6>
-                  <p style="font-size: small; color: grey;">Accede a tu cuenta con tus
-                      credenciales.</p>
+                <h6><b>Recuperar el acceso</b></h6>
+                <p style="font-size: small; color: grey;">
+                    Te enviaremos un link a tu dirección de email<br>para corroborar que eres tú el que intentas ingresar.
+                </p>
               </div>
-      
-              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+              <form [formGroup]="recoverForm" (ngSubmit)="onSubmit()">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Email</mat-label>
                     <input matInput formControlName="email" type="email"/>
                 </mat-form-field>
-                <mat-form-field appearance="outline" class="w-100">
-                    <mat-label>Contraseña</mat-label>
-                    <input matInput name="password" [type]="hide ? 'password' : 'text'" formControlName="password">
-                    <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </mat-form-field>
                   <button
-                      class="full-width">Acceder</button>
+                      class="full-width">Recuperar cuenta</button>
               </form>
       
               <div class="row">
                   <div class="links">
-                      <p>¿Olvidaste tu contraseña?</p><a href="/recover">Recuperar acceso</a>
+                      <p>¿Ya tienes cuenta?</p><a href="/login">Iniciar sesión</a>
                   </div>
                   <div class="links">
                       <p>¿Aun no tienes tu acceso?</p><a href="#">Solicítalo aqui</a>
@@ -42,5 +38,3 @@
       </div>
       <app-footer></app-footer>
 </div>
-
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#033baa" type = "ball-beat" [fullScreen] = "true"></ngx-spinner>
