--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,5 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "../node_modules/ngx-spinner/animations/ball-beat.css";
 @include mat.core();
