--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -42,5 +42,5 @@
       </div>
       <app-footer></app-footer>
 </div>
-
+<p-toast></p-toast>
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#033baa" type = "ball-beat" [fullScreen] = "true"></ngx-spinner>
